# chat-langchain

./: .dockerignore  .env.example  .gitignore  Dockerfile  Dockerfile.gpu  Makefile  README.md  _index.py  build.env  chain.py  chunker.py  constants.py  data.py  docker-compose.override.yml.example  docker-compose.yml  ingest.py  install.sh  main.py  pdfsplitter.py  pyproject.toml  requirements-gpu.txt  requirements.txt  response_template.txt  scrap.txt  setup.cfg  utils.py
chat-langchain/app/: layout.tsx  page.tsx
chat-langchain/app/components/: ChatMessageBubble.tsx  ChatWindow.tsx  EmptyState.tsx  SourceBubble.tsx
frontend/: .eslintrc.json  Makefile  next.config.js  package.json  scrap.txt  tailwind.config.js  types.ts
frontend/app/: layout.tsx  page.tsx
frontend/app/dbexplorer/: page.tsx
frontend/app/settings/: page.tsx
frontend/app/simple/: page.tsx
frontend/app/upload/: page.tsx
frontend/components/: AutoResizeTextarea.tsx  ChatMessageBubble.tsx  ChatWindow.tsx  EmptyState.tsx  Footer.tsx  IntermediateStep.tsx  LoadIcon.tsx  Navbar.tsx  RecordsExplorer.tsx  RecordsPagination.tsx  SimpleChatWindow.tsx  SimpleChatWindowNotCompatible.tsx  Source.tsx  Tasks.tsx  UploadDocumentsForm.tsx  UploadForm.tsx  alter.tsx  types.ts  useBackendChat.ts  useMarked.ts
frontend/components/ui/: AutoResizeTextarea.tsx  button.tsx  formfields.tsx  input.tsx  (+2 more)
frontend/lib/: useBackendChat.ts  useBackendSettings.ts  usePagination.ts  useSimpleChat.ts
prompt_templates/: ragprompt_llama_response.txt  rephrase_template.txt  response_template.txt  response_template_2.txt
(+8 files in other folders)
