[tool.poetry]
name = "chat-langchain"
version = "0.1.0"
description = ""
authors = ["SN <6432132+samnoyes@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
# python = "^3.10"
python = ">=3.10,<3.12"
openai = "^1.9.0"
fastapi = "^0.103.1"
pydantic = "^2.5.3"
uvicorn = "^0.23.2"
beautifulsoup4 = "^4.12.2"
weaviate-client = "^3.23.2"
psycopg2 = "^2.9.7"
lxml = "^4.9.3"
voyageai = "^0.1.4"

#langserve = {extras = ["server"], version = "^0.0.34"}
#langchain = "^0.0.333"
#tiktoken = "^0.4.0"
langserve = {extras = ["server"], version = "^0.0.39"}
langchain-openai = "^0.0.3"
langchain-together = "^0.0.2.post1"
python-dotenv = "^1.0.0"
python-multipart = "^0.0.6"
unstructured = {extras = ["all"], version = "^0.12.2"}
pymupdf = "^1.23.16"

[tool.poetry.group.dev.dependencies]
black = "^23.9.1"
isort = "^5.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pyright]

